Added Preprocessing parts

--- a/Resources/Examples.ipynb
+++ b/Resources/Examples.ipynb
@@ -2,7 +2,591 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "!pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/yachana/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/yachana/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download(\"punkt\")\n",
+    "nltk.download(\"stopwords\")\n",
+    "nepali_stopwords = set(stopwords.words(\"nepali\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def word_tokenizer(text):\n",
+    "    return text.split(' ')\n",
+    "\n",
+    "def remove_special_char(text):\n",
+    "    text = re.sub('[।,?!]', \"\", text)\n",
+    "    return text\n",
+    "\n",
+    "def remove_stopwords(text, stop_words=nepali_stopwords):\n",
+    "    filtered_text = [word for word in word_tokenizer(text) if word not in stop_words]\n",
+    "    return \" \".join(filtered_text)\n",
+    "\n",
+    "def Devnagari_Extractor(text):\n",
+    "    text = remove_special_char(text)\n",
+    "    text = remove_stopwords(text)\n",
+    "    tokens = word_tokenizer(text)\n",
+    "\n",
+    "    devanagari_range = r'[\\u0900-\\u097F\\\\]'\n",
+    "\n",
+    "    def is_devanagari(token):\n",
+    "        devanagari_chars = [char for char in token if re.match(devanagari_range, char)]\n",
+    "        return len(devanagari_chars) >= len(token) / 2\n",
+    "\n",
+    "    return \" \".join([token for token in tokens if is_devanagari(token)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_text = \"काठमाडौँभित्र 3%%% दिनभर पानी पर्ने र पोखरालगाएतमा बुटवलमा @ पानी नपर्ने Rajan 💪💪 😢 २४ १४११ १२३१२३२१३\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['काठमाडौँभित्र',\n",
+       " '3%%%',\n",
+       " 'दिनभर',\n",
+       " 'पानी',\n",
+       " 'पर्ने',\n",
+       " 'र',\n",
+       " 'पोखरालगाएतमा',\n",
+       " 'बुटवलमा',\n",
+       " '@',\n",
+       " 'पानी',\n",
+       " 'नपर्ने',\n",
+       " 'Rajan',\n",
+       " '💪💪',\n",
+       " '😢',\n",
+       " '२४',\n",
+       " '१४११',\n",
+       " '१२३१२३२१३']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_tokenizer(sample_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'काठमाडौँभित्र 3%%% दिनभर पानी पर्ने र पोखरालगाएतमा बुटवलमा @ पानी नपर्ने Rajan 💪💪 😢 २४ १४११ १२३१२३२१३'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_special_char(sample_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'काठमाडौँभित्र 3%%% दिनभर पानी पर्ने पोखरालगाएतमा बुटवलमा @ पानी नपर्ने Rajan 💪💪 😢 २४ १४११ १२३१२३२१३'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_stopwords(sample_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'काठमाडौँभित्र दिनभर पानी पर्ने पोखरालगाएतमा बुटवलमा पानी नपर्ने २४ १४११ १२३१२३२१३'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_text = Devnagari_Extractor(sample_text)\n",
+    "sample_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suffix_path = \"/home/yachana/Downloads/suffix.txt\"\n",
+    "def get_suffix():\n",
+    "    # Create a dictionary based on the length of suffix\n",
+    "    with open(suffix_path, 'r') as suff_file:\n",
+    "        suffixes = {}\n",
+    "        for row in suff_file.read().splitlines():\n",
+    "            stem_len = len(list(row))\n",
+    "            if stem_len not in suffixes:\n",
+    "                suffixes[stem_len] = [row]\n",
+    "            else:\n",
+    "                suffixes[stem_len] += ([row])\n",
+    "\n",
+    "    return suffixes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suffix = get_suffix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_suffix(word,suffix):\n",
+    "    for L in 9, 8, 7, 6, 5, 4, 3, 2:\n",
+    "        if len(word) > L + 1:\n",
+    "            for suf in suffix[L]:\n",
+    "                if word.endswith(suf):\n",
+    "                    ans = word[:-L]\n",
+    "                    return ans\n",
+    "    return word  # return the original word if no suffix is found\n",
+    "\n",
+    "def process_sentence(sentence, suffix):\n",
+    "    words = sentence.split()\n",
+    "    processed_words = [remove_suffix(word, suffix) for word in words]\n",
+    "    processed_sentence = ' '.join(processed_words)\n",
+    "    return processed_sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'काठमाडौँ दिन पानी पर्ने पोखरा बुटवल पानी नपर्ने २४ १४११ १२३१२३२१३'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process_sentence(sample_text,suffix)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vectorize text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building a vocabulary of nepali words\n",
+    "def build_vocab(data):\n",
+    "  vocab = []\n",
+    "  for sentence in data:\n",
+    "    # Cleaning\n",
+    "    cleaned_words = Devnagari_Extractor(sentence)\n",
+    "    # Tokenizing\n",
+    "    word_tokens = word_tokenizer(cleaned_words)\n",
+    "    vocab.extend(word_tokens)\n",
+    "  return list(set(vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\"नमस्कार! के छ खबर?\",\"रिता तपाईंको मित्र हो\",\"रामले वात खायो।\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = build_vocab(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['खायो', 'रामले', 'वात', 'तपाईंको', 'मित्र', 'रिता', 'खबर', 'नमस्कार']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word2idx = {word:i for i,word in enumerate(vocab)}\n",
+    "idx2word = {i:word for word,i in word2idx.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'खायो': 0,\n",
+       " 'रामले': 1,\n",
+       " 'वात': 2,\n",
+       " 'तपाईंको': 3,\n",
+       " 'मित्र': 4,\n",
+       " 'रिता': 5,\n",
+       " 'खबर': 6,\n",
+       " 'नमस्कार': 7}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word2idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'खायो',\n",
+       " 1: 'रामले',\n",
+       " 2: 'वात',\n",
+       " 3: 'तपाईंको',\n",
+       " 4: 'मित्र',\n",
+       " 5: 'रिता',\n",
+       " 6: 'खबर',\n",
+       " 7: 'नमस्कार'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idx2word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bag_of_words(sent):\n",
+    "  #Cleaning\n",
+    "  cleaned_words = Devnagari_Extractor(sent)\n",
+    "  #Tokenizing\n",
+    "  processed_texts = word_tokenizer(cleaned_words)\n",
+    "  vector = np.zeros(len(vocab))\n",
+    "  for word in processed_texts:\n",
+    "    vector[word2idx[word]] = 1\n",
+    "  return vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 1., 1.])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bag_of_words(data[0])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TF-IDF\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Counting the number of times each word appear in documents\n",
+    "def count_dict(sentences):\n",
+    "    count_dict = {}\n",
+    "    for word in vocab:\n",
+    "        count_dict[word] = 0\n",
+    "    for sent in sentences:\n",
+    "        #Cleaning the text\n",
+    "        cleaned_words = Devnagari_Extractor(sent)\n",
+    "        #Tokenizing the text\n",
+    "        processed_texts = word_tokenizer(cleaned_words)\n",
+    "        for word in processed_texts:\n",
+    "            count_dict[word] += 1\n",
+    "    return count_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'खायो': 1, 'रामले': 1, 'वात': 1, 'तपाईंको': 1, 'मित्र': 1, 'रिता': 1, 'खबर': 1, 'नमस्कार': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_count = count_dict(data)\n",
+    "print(word_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def term_frequency(document, word):\n",
+    "    N = len(document)\n",
+    "    occurance = 0\n",
+    "    for token in document:\n",
+    "        if token == word:\n",
+    "            occurance += 1\n",
+    "    return occurance / N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inverse_document_frequency(word):\n",
+    "    try:\n",
+    "        word_occurance = word_count[word] + 1\n",
+    "    except:\n",
+    "        word_occurance = 1\n",
+    "    return np.log(len(data) / word_occurance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tf_idf(sentence):\n",
+    "    vec = np.zeros((len(vocab),))\n",
+    "    cleaned_words = Devnagari_Extractor(sentence)\n",
+    "    #Tokenizing the text\n",
+    "    processed_texts = word_tokenizer(cleaned_words)\n",
+    "    for word in processed_texts:\n",
+    "        tf = term_frequency(processed_texts, word)\n",
+    "        idf = inverse_document_frequency(word)\n",
+    "        vec[word2idx[word]] = tf * idf\n",
+    "    return vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['नमस्कार! के छ खबर?', 'रिता तपाईंको मित्र हो', 'रामले वात खायो।']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "def cal_cosine_similarity(text1, text2):\n",
+    "    vec1 = tf_idf(text1)\n",
+    "    vec2 = tf_idf(text2)\n",
+    "    vec1 = np.asarray(vec1).reshape(-1,vec1.shape[0])\n",
+    "    vec2 =  np.asarray(vec2).reshape(-1,vec2.shape[0])\n",
+    "    print(cosine_similarity(vec1, vec2))\n",
+    "    return cosine_similarity(vec1, vec1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1.])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cal_cosine_similarity(data[0],data[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +653,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
