--- a/NepaliNewsClassification.ipynb
+++ b/NepaliNewsClassification.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "5Z3idNqNtl74"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -56,35 +56,9 @@
         "id": "KQuEV8HTsjS8",
         "outputId": "f7cf941b-2c23-48e5-f8e8-d8746144ecce"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Downloading...\n",
-            "From (uriginal): https://drive.google.com/uc?id=1kWfMHosbwCe9xfURNMrZImcDGEbOfXRu\n",
-            "From (redirected): https://drive.google.com/uc?id=1kWfMHosbwCe9xfURNMrZImcDGEbOfXRu&confirm=t&uuid=2769f4a9-bdb3-4612-b867-3908bc079493\n",
-            "To: /home/rjn/Documents/GitHub/Nepali-News-Classification-LR/data.csv\n",
-            "100%|██████████| 268M/268M [00:54<00:00, 4.92MB/s] \n",
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=18rTuyLtaxdzQwxDzNEIxFSUomBgewcJ3\n",
-            "To: /home/rjn/Documents/GitHub/Nepali-News-Classification-LR/suffix.txt\n",
-            "100%|██████████| 5.14k/5.14k [00:00<00:00, 2.35MB/s]\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "'suffix.txt'"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# # # Download the data\n",
+        "# # # # Download the data\n",
         "# import gdown\n",
         "# gdown.download(id=\"1kWfMHosbwCe9xfURNMrZImcDGEbOfXRu\")\n",
         "# gdown.download(id=\"18rTuyLtaxdzQwxDzNEIxFSUomBgewcJ3\")\n"
@@ -92,13 +66,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "FZ1Uw_4htPPQ"
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv('data.csv')\n",
+        "df = pd.read_csv('data.csv')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# First, ensure there are no float values in 'Title'\n",
         "df = df[~df['Title'].apply(lambda x: isinstance(x, float))]\n",
         "df = df[~df['News'].apply(lambda x: isinstance(x, float))]"
@@ -106,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -212,7 +194,7 @@
               "4  १० फागुन, काठमाडौं । अन्तराष्ट्रिय क्रिकेट काउ...  "
             ]
           },
-          "execution_count": 4,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2395,7 +2377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
