--- a/Resources/Examples.ipynb
+++ b/Resources/Examples.ipynb
@@ -772,6 +772,30 @@
     "    model.w -= model.lr * gradient\n",
     "    print(f'Shape of weights after update: {model.w.shape}')  # (4, 301)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data\n",
+    "data = {\n",
+    "    'Category': ['Fruit', 'Vegetable', 'Fruit', 'Vegetable', 'Fruit'],\n",
+    "    'Item': ['Apple', 'Carrot', 'Banana', 'Broccoli', 'Apple'],\n",
+    "    'Sales': [100, 200, 150, 300, 50]\n",
+    "}\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Group by the 'Category' column and sum the 'Sales' column\n",
+    "grouped_data = df.groupby('Category')['Sales'].sum().reset_index()\n",
+    "\n",
+    "print(grouped_data)"
+   ]
   }
  ],
  "metadata": {
@@ -790,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
